force-app/main/default/objects/KB_Assessment_Progress__e/KB_Assessment_Progress__e.object-meta.xml
<CustomObject>
    <description>Platform Event for real-time KB Assessment progress updates from Queueable jobs to LWC UI.</description>
    <label>KB Assessment Progress</label>
    <pluralLabel>KB Assessment Progress</pluralLabel>
</CustomObject>