force-app/main/default/objects/KB_Assessment_Progress__e/fields/Articles_Processed__c.field-meta.xml
<CustomField>
    <fullName>Articles_Processed__c</fullName>
    <description>Number of articles processed so far</description>
    <label>Articles Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>