force-app/main/default/objects/KB_Assessment_Progress__e/fields/Assessment_Id__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Id__c</fullName>
    <description>The KB_Assessment__c record Id this event relates to</description>
    <label>Assessment Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>