force-app/main/default/objects/KB_Assessment_Progress__e/fields/Current_Batch__c.field-meta.xml
<CustomField>
    <fullName>Current_Batch__c</fullName>
    <description>Current batch number being processed (1-based)</description>
    <label>Current Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>