force-app/main/default/objects/KB_Assessment_Progress__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Human-readable status message for UI display</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>