force-app/main/default/objects/KB_Assessment_Progress__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Assessment status: In Progress, Completed, or Failed</description>
    <label>Status</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>