force-app/main/default/objects/KB_Assessment_Progress__e/fields/Total_Articles__c.field-meta.xml
<CustomField>
    <fullName>Total_Articles__c</fullName>
    <description>Total number of articles being assessed</description>
    <label>Total Articles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>