force-app/main/default/objects/KB_Assessment_Progress__e/fields/Total_Batches__c.field-meta.xml
<CustomField>
    <fullName>Total_Batches__c</fullName>
    <description>Total number of batches in this assessment run</description>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>